--- a/server.cfg
+++ b/server.cfg
@@ -1,7 +1,7 @@
 # you probably don't want to change these!
 # only change them if you're using a server with multiple network interfaces
-endpoint_add_tcp "103.86.50.176:30120"
-endpoint_add_udp "103.86.50.176:30120"
+endpoint_add_tcp "127.0.0.1:30120"
+endpoint_add_udp "127.0.0.1:30120"
 
 set es_enableCustomData 1
 set mysql_connection_string "server=127.0.0.1;database=hnomkeng_fivem;userid=hnomkeng;password=Deathnote1#"
@@ -96,7 +96,7 @@ sv_scriptHookAllowed 0
 # change this
 rcon_password yay
 
-sv_hostname "[Dev Server] Hnomkeng Colocation | RolePlay | www.hnomkeng.com | Thailand (Server 1)"
+sv_hostname "LOS PIBES RP"
 
 # nested configs!
 #exec server_internal.cfg
@@ -126,4 +126,4 @@ add_principal identifier.steam:11000010a4c2fb1 group.admin # add the admin to th
 sv_maxclients 32
 
 # license key for server (https://keymaster.fivem.net)
-sv_licenseKey 5bhjpgjc20vu978ijwnb656nfzrek246
+sv_licenseKey gpwa87hc7b3e2zoo1iotiwair7suho0r
